--- a/ChefConnect.BackEnd/ChefConnect.Domain/ChefConnect.Domain.csproj
+++ b/ChefConnect.BackEnd/ChefConnect.Domain/ChefConnect.Domain.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 
 </Project>
