--- a/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
+++ b/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+
+  "JwtSettings": {
+    "SecretKey": "YourSuperSecureKey12345",
+    "Issuer": "ChefConnect",
+    "Audience": "ChefConnectAudience"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=DEVPHUCTRANN; Database=ChefConnectDB; User Id=sa; Password=12345; TrustServerCertificate=True;"
   },
