--- a/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
+++ b/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
@@ -1,9 +1,9 @@
 {
 
   "JwtSettings": {
-    "SecretKey": "YourSuperSecureKey12345",
-    "Issuer": "ChefConnect",
-    "Audience": "ChefConnectAudience"
+    "SecretKey": "thisisaverysecurekeythatshouldbeatleast32chars",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
   },
 
   "ConnectionStrings": {
