finish login and signup

--- a/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
+++ b/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
@@ -1,9 +1,11 @@
 {
 
   "JwtSettings": {
-    "SecretKey": "thisisaverysecurekeythatshouldbeatleast32chars",
-    "Issuer": "YourIssuer",
-    "Audience": "YourAudience"
+    "SecretKey": "YourSuperSecuHEHEHEHEHEHEHEreKeyHere123!", 
+    "Issuer": "YourAppIssuer", 
+    "Audience": "YourAppAudience", 
+    "AccessTokenExpiryMinutes": 15, 
+    "RefreshTokenExpiryDays": 7 
   },
 
   "ConnectionStrings": {
