--- a/ChefConnect.BackEnd/ChefConnect.Application/ChefConnect.Application.csproj
+++ b/ChefConnect.BackEnd/ChefConnect.Application/ChefConnect.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ChefConnect.Infrastructure\ChefConnect.Infrastructure.csproj" />
   </ItemGroup>
 
