--- a/ChefConnect.BackEnd/ChefConnect.Domain/ChefConnect.Domain.csproj
+++ b/ChefConnect.BackEnd/ChefConnect.Domain/ChefConnect.Domain.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
