optimize authen & author

--- a/ChefConnect.BackEnd/ChefConnect.API/ChefConnect.API.csproj
+++ b/ChefConnect.BackEnd/ChefConnect.API/ChefConnect.API.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\ChefConnect.Application\ChefConnect.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
