--- a/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
+++ b/ChefConnect.BackEnd/ChefConnect.API/appsettings.json
@@ -1,11 +1,9 @@
 {
 
-  "JwtSettings": {
-    "SecretKey": "YourSuperSecuHEHEHEHEHEHEHEreKeyHere123!", 
-    "Issuer": "YourAppIssuer", 
-    "Audience": "YourAppAudience", 
-    "AccessTokenExpiryMinutes": 15, 
-    "RefreshTokenExpiryDays": 7 
+  "Jwt": {
+    "SecretKey": "UYDEV_SECRETKEY_SIEUCAPBAOMAT_ABCXYZ_RATNHIEUKYT",
+    "Issuer": "UYDEV_Issuer",
+    "Audience": "UYDEV_Audience"
   },
 
   "ConnectionStrings": {
