--- a/ChefConnect.BackEnd/ChefConnect.Application/ChefConnect.Application.csproj
+++ b/ChefConnect.BackEnd/ChefConnect.Application/ChefConnect.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.2.0" />
   </ItemGroup>
 
